# beak

./: .cproject  .gitignore  .project  .travis.yml  Main.gmk  Makefile  Makefile.in  README.md  beak.1  beak.cc  beak.h  clean_tarrefs_dirs.sh  compare.sh  configure  configure.ac  defs.h  diff.cc  diff.h  format_find.pl  format_tar.pl  forward.cc  forward.h  generate_filesystem.sh  glob.cc  glob.h  help.cc  help.h  integrity-test.sh  log.cc  log.h  main.cc  match.cc  match.h  nofuse.h  pack.sh  reverse.cc  reverse.h  spec.gmk.in  tar.cc  tar.h  (+15 more)
.github/workflows/: build_macos.yml  build_macosx.yml  build_ubuntu.yml
autoconf/: config.h.in  spec.gmk.in  spec.mk.in
doc/: beak.1
libtar/lib/: encode.c  libtar.h  util.c
make/: Main.gmk  Main.mk  Makefile.in
scripts/: autocompletion_for_beak.sh  clean_tarrefs_dirs.sh  compare.sh  filetypes.inc  format_find.pl  format_tar.pl  generate_filesystem.sh  generate_filetypes.sh  integrity-test.sh  monitor.sh  pack.sh  plot_store.sh  restore.sh  systemd_mount_trigger.sh  untar.sh
src/: MAP.md  always.cc  always.h  backup.cc  backup.h  beak.cc  beak.h  beak_cameramedia.cc  beak_commandline.cc  beak_configure.cc  beak_delta.cc  beak_diff.cc  beak_fsck.cc  beak_genautocomp.cc  beak_help.cc  beak_implementation.h  beak_importmedia.cc  beak_indexmedia.cc  beak_monitor.cc  beak_prune.cc  beak_pull.cc  beak_push.cc  beak_restore.cc  beak_servemedia.cc  beak_shell.cc  beak_slurp.cc  beak_stash.cc  beak_stat.cc  beak_status.cc  beak_store.cc  config.cc  config.h  configuration.cc  configuration.h  contentsplit.cc  contentsplit.h  defs.h  delta.h  diff.cc  diff.h  (+73 more)
tests/: test_basics.sh  test_cmdline.sh  test_config.sh
